--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -14,8 +14,13 @@
 /loopStatements/
 /loops/
 /methodsInJava/
-/nonAccess/
 /operators/
 /staticNonAccessModifiers/
 /variables/
+/exception/
+/finalPack/
+/nonAccess/
+/polymorphism/
 /staticConcepts/
+/stringOperations/
+/synchronizedNonAccessModifier/
